# inference-snap-pyclient

./: .gitignore  LICENSE  Makefile  README.md  chat.py  pyproject.toml  spread.yaml
.github/workflows/: spread.yaml  test.yml
.image-garden/: README.md
snap/: snapcraft.yaml
tests/hello/: task.yaml
tests/smoke/os-release/: task.yaml
tests/smoke/uname/: task.yaml
