# SPDX-FileCopyrightText: 2025 Lincoln Wallace
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclient"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["openai"]

[project.scripts]
chat = "chat:main"

[tool.setuptools]
py-modules = ["chat"]
